ci: adiciona job para build e push da imagem docker

--- a/.github/workflows/ci-biblioteca.yml
+++ b/.github/workflows/ci-biblioteca.yml
@@ -23,3 +23,28 @@ jobs:
       - name: Compilar e Testar com Maven
         run: mvn -B verify
         working-directory: ./biblioteca-pessoal
+
+  docker:
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+
+      - name: Login no GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Construir e Publicar Imagem Docker
+        uses: docker/build-push-action@v5
+        with:
+          context: ./biblioteca-pessoal
+          push: true
+          tags: ghcr.io/scarletykaro10/${{ github.event.repository.name }}:latest
