--- a/.github/workflows/ci-biblioteca.yml
+++ b/.github/workflows/ci-biblioteca.yml
@@ -13,13 +13,11 @@ jobs:
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
-
       - name: Configurar JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-
       - name: Compilar e Testar com Maven
         run: mvn -B verify
         working-directory: ./biblioteca-pessoal
@@ -34,17 +32,33 @@ jobs:
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
-
       - name: Login no GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Construir e Publicar Imagem Docker
         uses: docker/build-push-action@v5
         with:
           context: ./biblioteca-pessoal
           push: true
           tags: ghcr.io/scarletykaro10/${{ github.event.repository.name }}:latest
+
+  deploy-dev:
+    name: Deploy to Development
+    runs-on: ubuntu-latest
+    needs: docker
+    environment: development
+    steps:
+      - name: Simulando deploy em Desenvolvimento
+        run: echo "Deploy para Development concluído."
+
+  deploy-prod:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: deploy-dev
+    environment: production
+    steps:
+      - name: Simulando deploy em Produção
+        run: echo "Deploy para Produção concluído."
